// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/store/carts POST /store/carts/:id fails to complete cart with items inventory not/partially covered 1`] = `
Object {
  "code": "insufficient_inventory",
  "message": "Variant with id: test-variant-2 does not have the required inventory",
  "type": "not_allowed",
}
`;

exports[`/store/carts POST /store/carts/:id returns early, if cart is already completed 1`] = `
Object {
  "code": "cart_incompatible_state",
  "message": "Cart has already been completed",
  "type": "not_allowed",
}
`;
